# dotfile-parser

./: Cargo.toml  README.md  ]
.github/workflows/: unit-test.yml
examples/: dump.rs
samples/: basic1.dot  basic4.dot  identifiers.dot
samples/reference/: basic1.ref  basic2.ref  basic3.ref  basic4.ref  datastruct.ref  identifiers.ref
src/: ast_nodes.rs  lex.rs  lib.rs  main.rs  parse.rs
src/ast_nodes/: assignment.rs  edge.rs  mod.rs  node.rs  statement.rs  subgraph.rs
src/nodes/: attributes.rs  common.rs  edge_operation.rs  edge_rhs.rs  edge_statement.rs  graph_node.rs  mod.rs  statement_node.rs
