[package]
name = "dot_parser"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "An AST definition and parser for graphviz files"
homepage = "https://github.com/saresend/dotfile-parser"
repository = "https://github.com/saresend/dotfile-parser"
authors = ["Samuel Resendez <samresendez1@gmail.com>"]

[dependencies]
logos = "0.12.0"
anyhow = "1.0.44"
